--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -10,17 +10,19 @@
 \maketitle  % para que aprezca el título en el documento
 
 
-% Notas teóricas correspondiente a esta guía
+%=========================
+% Un poco de teoría
+%=========================
 \input{./teoria-7/teoria-7.tex}
 
 \newpage % página nueva
 
 %=========================
-% Ejercicios extras
+% Ejercicios extras, parciales, etc.
 %=========================
 \subsubsection*{Ejercicios extras:}
 
-\foreach \x in {1,2} {
+\foreach \x in {1} {
 		\input{./ejercicios-7-extra/ej-extra-\x-7.tex}
 	}
 
