--- a/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
@@ -45,6 +45,8 @@
 
 
 	\item
+	      % \mcd{X^6 - 4X^5 - X^4 + 4X^3 + 4X^2 + 48X + 48}{3X^5 - 10X^4 - 2X^3 + 6X^2 + 4X + 24}
+
 	      Debe ocurrir que $(X - \sqrt{3}i))(X + \sqrt{3}i) = X^2 + 3 \divideA f$\\
 	      \divPol{X^6 - 4X^5 - X^4 + 4X^3 + 4X^2 + 48X + 48}{X^2 + 3}\\
 
@@ -55,15 +57,10 @@
 		      q'(-2) = 0 \text{, pero } f(\magenta{-2})\distinto 0\\
 		      \flecha{divido para}[bajar grado]
 	      $
-		      \divPol{X^3 - 3X^2 - 2X + 16}{X + 2}\\
-              $
-          \flecha{busco raíces}[de] X^2 - 5X + 8 = 0 \sisolosi \alpha = 5 \pm \dots 
-          $
+	      \divPol{X^3 - 3X^2 - 2X + 16}{X + 2}\\
+	      $
+		      \flecha{busco raíces}[de] X^2 - 5X + 8 = 0 \sisolosi \alpha = 5 \pm \dots
+	      $
 
-          \red{Algo estoy haciendo mal, esto se hizo eterno$\skull\skull\skull$}
-
-
-
-
-
+	      \red{Algo estoy haciendo mal, esto se hizo eterno$\skull\skull\skull$}
 \end{enumerate}
