--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -3,7 +3,7 @@
 \newcommand{\mult}[1]{\text{mult}(#1)}
 
 
-\subsubsection*{Definiciones y fórmulas útiles}
+\subsubsection*{Un poco de teoría}
 
 \begin{itemize}
 	\item \textit{Operaciones: }
@@ -51,7 +51,10 @@
 	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f'(\alpha) = 0 \sisolosi \alpha$
 	      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
 	      \begin{itemize}
-		      \item $\mult{\alpha,f} = m \sisolosi f(\alpha) = 0$ y $\mult(\alpha;f') = m-1$
+            \item $
+              \mult{\alpha,f} = m 
+              \sisolosi 
+              f(\alpha) = 0$ y $\mult{\alpha;f'} = m-1$
 
 		      \item $\mult{\alpha;f} = m \sisolosi
 			            \llave{rl}{
