--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -33,7 +33,7 @@
 
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
-\usetikzlibrary{external}
+\usetikzlibrary{external,decorations.pathreplacing}
 
 \setlength{\parindent}{0pt} % Para que no haya indentación en las nuevas líneas.
 
