--- a/1-guia/1-sol.tex
+++ b/1-guia/1-sol.tex
@@ -11,7 +11,7 @@
 % === Buscar forma más agradable de presentar a los que contribuyan
 \author{La comunidad algebraica} % autor
 
-\date{last update: \today} % Cambiar de ser necesario
+\date{última compilacion: \today} % Cambiar de ser necesario
 \maketitle  % Para que aprezca el título en el documento
 
 % Archivo con notas teóricas
