--- a/2-guia/2-sol.tex
+++ b/2-guia/2-sol.tex
@@ -19,7 +19,8 @@
 % Info para armar título.
 \title{Práctica 2 de álgebra 1} % título
 \author{Comunidad algebraica} % autor
-\date{\today} % Cambiar de ser necesario
+\date{última compilacion: \today} % Cambiar de ser necesario
+
 % \maketitle  % Para que aprezca el título en el documento
 
 \input{./teoria-2/teoria-2.tex}
