--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -6,7 +6,7 @@
 % Info para armar título.
 \title{Práctica 7 de álgebra 1} % título
 \author{Comunidad algebraica} % autor
-\date{last update: \today} % Cambiar de ser necesario
+\date{última compilacion: \today} % Cambiar de ser necesario
 \maketitle  % para que aprezca el título en el documento
 
 
