--- a/4-guia/4-sol.tex
+++ b/4-guia/4-sol.tex
@@ -11,7 +11,7 @@
 % Info para armar título.
 \title{Práctica 4 de álgebra 1} % título
 \author{Comunidad algebraica} % autor
-\date{last update: \today} % Cambiar de ser necesario
+\date{última compilacion: \today} % Cambiar de ser necesario
 
 \maketitle  % para que aprezca el título en el documento
 \section{Definiciones y fórmulas útiles}
