--- a/7-guia/ejercicios-7/ej-17-7.tex
+++ b/7-guia/ejercicios-7/ej-17-7.tex
@@ -4,4 +4,5 @@ Sea $n \en \naturales$. Determinar todos los $a \en \complejos$ tales que
 $f = nX^{n+1} - (n+1)X^n + a$ tiene solo raíces simples en $\complejos$.
 
 \separadorCorto
+\red{Pasar}
  
